mysql user config changes

--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,5 @@
-MYSQL_ROOT_PASSWORD=<>
 MYSQL_DATABASE=<>
-MYSQL_USER="nodejs"
+MYSQL_USER="user"
 MYSQL_PASSWORD="password"
 
 DB_HOST="database"
@@ -8,7 +7,5 @@ DB_PORT="3306"
 DB_CHARSET="utf8"
 
 API_SECRET_KEY=<>
-
-# https://vapidkeys.com/
 VAPID_PRIVATE=<>
 VAPID_PUBLIC=<>
