updated template to include new secrets

--- a/.env.template
+++ b/.env.template
@@ -1,11 +1,16 @@
+# DB Setup
+MYSQL_ROOT_PASSWORD=<>
 MYSQL_DATABASE=<>
 MYSQL_USER="user"
 MYSQL_PASSWORD="password"
-
 DB_HOST="database"
 DB_PORT="3306"
 DB_CHARSET="utf8"
 
+# Key for JWT Hashing
 API_SECRET_KEY=<>
+
+# Push Notifications
+EMAIL_ADDRESS=<>
 VAPID_PRIVATE=<>
 VAPID_PUBLIC=<>
