expose default port 80

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -9,6 +9,8 @@ RUN npm install
 # Copy all files from current directory to working dir in image
 COPY . ./
 
-ENV PORT 8080
+ENV PORT 80
+
+EXPOSE 80
 
 ENTRYPOINT [ "npm", "start" ]
