--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,8 @@ services:
   frontend:
     build: ./frontend
     restart: unless-stopped
+    ports:
+      - "80:80"
     volumes: 
       - ./frontend/src:/app/src
     environment:
